--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.80.0",
+    "@tailwindcss/vite": "^4.1.17",
     "@vercel/analytics": "^1.5.0",
     "lucide-react": "^0.552.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "three": "^0.181.0"
   },
   "overrides": {
     "@types/react": "^18.3.5",
@@ -25,6 +27,7 @@
     "@eslint/js": "^9.39.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^19.2.2",
+    "@types/three": "^0.181.0",
     "@vitejs/plugin-react": "^4.3.2",
     "autoprefixer": "^10.4.21",
     "eslint": "^9.39.1",
@@ -32,7 +35,7 @@
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^15.9.0",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^5.4.2"
