feat: add Vercel deployment checks integration
- Add Vercel status notifications to all-checks job
- Workflow now sends success/failure status to Vercel
- Enables Vercel to wait for pipeline before deploying

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -254,6 +254,20 @@ jobs:
           fi
           echo "✓ All checks passed"
 
+      - name: Notify Vercel (success)
+        if: success()
+        uses: vercel/repository-dispatch/actions/status@v1
+        with:
+          name: Vercel - exotu-website: all-checks
+          status: success
+
+      - name: Notify Vercel (failure)
+        if: failure()
+        uses: vercel/repository-dispatch/actions/status@v1
+        with:
+          name: Vercel - exotu-website: all-checks
+          status: failure
+
   # Job 9: Send failure notification (only on failure)
   notify-failure:
     if: failure()
